--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@babel/runtime": "^7.22.6",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "redis": "^3.0.2",
     "socket.io": "^4.7.1"
   }
 }
